Use standard collections in docs