@@ -2373,9 +2373,7 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
                 null);
             PutIndexTemplateV2Request putRequest = new PutIndexTemplateV2Request()
                 .name("my-template")
-                .indexTemplate(
-                    new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"), template, null, null, null, null)
-                );
+                .indexTemplate(new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), template, null, null, null, null));
             assertTrue(client.indices().putIndexTemplate(putRequest, RequestOptions.DEFAULT).isAcknowledged());
         }
 
@@ -2434,7 +2432,7 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
             PutIndexTemplateV2Request request = new PutIndexTemplateV2Request()
                 .name("my-template"); // <1>
             IndexTemplateV2 indexTemplateV2 =
-                new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"), null, null, null, null, null); // <2>
+                new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), null, null, null, null, null); // <2>
             request.indexTemplate(indexTemplateV2);
 
             assertTrue(client.indices().putIndexTemplate(request, RequestOptions.DEFAULT).isAcknowledged());
@@ -2450,8 +2448,8 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
                 .put("index.number_of_replicas", 1)
                 .build();
             Template template = new Template(settings, null, null); // <2>
-            IndexTemplateV2 indexTemplateV2 = new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"),
-                template, null, null, null, null); // <3>
+            IndexTemplateV2 indexTemplateV2 =
+                new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), template, null, null, null, null); // <3>
             request.indexTemplate(indexTemplateV2);
 
             assertTrue(client.indices().putIndexTemplate(request, RequestOptions.DEFAULT).isAcknowledged());
@@ -2470,8 +2468,8 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
             PutIndexTemplateV2Request request = new PutIndexTemplateV2Request()
                 .name("my-template");
             Template template = new Template(null, new CompressedXContent(mappingJson), null); // <2>
-            IndexTemplateV2 indexTemplateV2 = new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"),
-                template, null, null, null, null); // <3>
+            IndexTemplateV2 indexTemplateV2 =
+                new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), template, null, null, null, null); // <3>
             request.indexTemplate(indexTemplateV2);
 
             assertTrue(client.indices().putIndexTemplate(request, RequestOptions.DEFAULT).isAcknowledged());
@@ -2484,10 +2482,12 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
                 .name("my-template");
             AliasMetadata twitterAlias = AliasMetadata.builder("twitter_alias").build(); // <1>
             AliasMetadata placeholderAlias = AliasMetadata.builder("{index}_alias").searchRouting("xyz").build(); // <2>
-            Template template = new Template(null, null,
-                org.elasticsearch.common.collect.Map.of("twitter_alias", twitterAlias, "{index}_alias", placeholderAlias)); // <3>
-            IndexTemplateV2 indexTemplateV2 = new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"),
-                template, null, null, null, null); // <3>
+            Map<String, AliasMetadata> aliases = new HashMap<>();
+            aliases.put("twitter_alias", twitterAlias);
+            aliases.put("{index}_alias", placeholderAlias);
+            Template template = new Template(null, null, aliases); // <3>
+            IndexTemplateV2 indexTemplateV2 =
+                new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), template, null, null, null, null);
             request.indexTemplate(indexTemplateV2);
 
             assertTrue(client.indices().putIndexTemplate(request, RequestOptions.DEFAULT).isAcknowledged());
@@ -2504,8 +2504,7 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
             PutIndexTemplateV2Request request = new PutIndexTemplateV2Request()
                 .name("my-template");
             IndexTemplateV2 indexTemplateV2 =
-                new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"), null,
-                    org.elasticsearch.common.collect.List.of("ct1"), null, null, null); // <1>
+                new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), null, Arrays.asList("ct1"), null, null, null); // <1>
             request.indexTemplate(indexTemplateV2);
 
             assertTrue(client.indices().putIndexTemplate(request, RequestOptions.DEFAULT).isAcknowledged());
@@ -2517,7 +2516,7 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
             PutIndexTemplateV2Request request = new PutIndexTemplateV2Request()
                 .name("my-template");
             IndexTemplateV2 indexTemplateV2 =
-                new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"), null, null, 20L, null, null); // <1>
+                new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), null, null, 20L, null, null); // <1>
             request.indexTemplate(indexTemplateV2);
 
             assertTrue(client.indices().putIndexTemplate(request, RequestOptions.DEFAULT).isAcknowledged());
@@ -2529,7 +2528,7 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
             PutIndexTemplateV2Request request = new PutIndexTemplateV2Request()
                 .name("my-template");
             IndexTemplateV2 indexTemplateV2 =
-                new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"), null, null, null, 3L, null); // <1>
+                new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), null, null, null, 3L, null); // <1>
             request.indexTemplate(indexTemplateV2);
 
             assertTrue(client.indices().putIndexTemplate(request, RequestOptions.DEFAULT).isAcknowledged());
@@ -2586,7 +2585,7 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
             PutIndexTemplateV2Request request = new PutIndexTemplateV2Request()
                 .name("my-template");
             IndexTemplateV2 indexTemplateV2 =
-                new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"), null, null, null, null, null); // <2>
+                new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), null, null, null, null, null); // <2>
             request.indexTemplate(indexTemplateV2);
             assertTrue(client.indices().putIndexTemplate(request, RequestOptions.DEFAULT).isAcknowledged());
         }
@@ -2612,7 +2611,7 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
             PutIndexTemplateV2Request request = new PutIndexTemplateV2Request()
                 .name("my-template");
             IndexTemplateV2 indexTemplateV2 =
-                new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"), null, null, null, null, null); // <2>
+                new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), null, null, null, null, null); // <2>
             request.indexTemplate(indexTemplateV2);
             assertTrue(client.indices().putIndexTemplate(request, RequestOptions.DEFAULT).isAcknowledged());
         }
@@ -2650,7 +2649,7 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
                 .name("my-template"); // <1>
             Template template = new Template(Settings.builder().put("index.number_of_replicas", 3).build(), null, null);
             IndexTemplateV2 indexTemplateV2 =
-                new IndexTemplateV2(org.elasticsearch.common.collect.List.of("pattern-1", "log-*"), template, null, null, null, null);
+                new IndexTemplateV2(Arrays.asList("pattern-1", "log-*"), template, null, null, null, null);
             request.indexTemplate(indexTemplateV2);
             assertTrue(client.indices().putIndexTemplate(request, RequestOptions.DEFAULT).isAcknowledged());
         }
@@ -2662,7 +2661,7 @@ public class IndicesClientDocumentationIT extends ESRestHighLevelClientTestCase 
         Settings settings = Settings.builder().put("index.number_of_shards", 6).build();
         Template template = new Template(settings, null, null); // <2>
         IndexTemplateV2 indexTemplateV2 =
-            new IndexTemplateV2(org.elasticsearch.common.collect.List.of("log-*"), template, null, 90L, null, null);
+            new IndexTemplateV2(Arrays.asList("log-*"), template, null, 90L, null, null);
         newIndexTemplateRequest.indexTemplate(indexTemplateV2);
 
         simulateRequest.indexTemplateV2Request(newIndexTemplateRequest); // <2>
